fix margin left on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -7,15 +7,16 @@
 
 html,
 body {
-  height: 100%;
+	width: 100%;
+    height: 100%;
 	margin: 0;
 	padding: 0;
 }
 
 body {
 	font: 1em "Architects Daughter", cursive;
-  overflow-x: hidden;
-  color: #fff;
+	overflow-x: hidden;
+	color: #fff;
 }
 
 /**
@@ -26,18 +27,23 @@ body {
 
 .flex-container {
   margin: 0;
+  padding: 0;
   width: 100%;
   height: 100%;
 }
 
 .row {
-  display: -webkit-flex;
-  display:         flex;
-  -webkit-flex-flow: row;
-          flex-flow: row;
+	margin: 0;
+	padding: 0;
+	display: -webkit-flex;
+	display:         flex;
+	-webkit-flex-flow: row;
+            flex-flow: row;
 }
 
 .col-1 {
+  margin: 0;
+  padding: 0;
   position: absolute;
   width: 650px;
   height: 100%;
@@ -204,8 +210,6 @@ header {
   -webkit-justify-content: space-around;
   justify-content: space-around;
   align-items: center;
-  /*background: #3369e8;
-  opacity: 0.75;*/
   background-color: rgba(0,0,255,0.5);
 }
 
@@ -456,7 +460,7 @@ main {
 }
 
 .search-results ul {
-  margin: 0;
+  margin: 0 0.5em;
   padding: 0;
 	list-style: none;
 }
@@ -617,7 +621,7 @@ a.control_next {
   border: 2px solid #fff;
   padding: auto 0.25em;
   height: 2em;
-  width: 15em;
+  width: auto;
 }
 
 
@@ -838,13 +842,19 @@ a:hover {
  */
 
 @media only screen and (max-width: 380px) {
-  body {
-    margin: 0;
-    padding: 0;
-  }
+
   header p {
     display: none;
   }
+
+  .col-1 {
+     -webkit-transform: translate(0,0);
+     transform: translate(0,0);
+  }
+  .col-2 {
+    position: static;
+  }
+
 }
 
 @media only screen and (max-width: 600px) {
@@ -859,26 +869,34 @@ a:hover {
   .reverse {
     display: none;
   }
+
   .col-1 {
-    width: 200px;
+
   }
+
+  .col-2 {
+    position: static;
+  }
+
+  .search-results ul li img {
+    display: none;
+  }
+
+  .col-3,
+  .col-4,
+  .col-5 {
+    display: none;
+  }
+
 }
 
 @media only screen and (max-width: 800px) {
-	body {
-		margin: 0;
-	}
-	.flex-container {
+.flex-container {
   	justify-content: flex-start;
   	align-items: flex-start;
-  	margin: 0 0.5em;
   }
   .search {
   	margin: 0;
-  }
-  .col-2,
-  .col-3 {
-  	display: none;
   }
   header .item-3 {
   	display: none;
@@ -898,9 +916,6 @@ a:hover {
     display: flex;
     -webkit-flex-flow: row nowrap;
     flex-flow: row nowrap;
-  }
-  .col-2 {
-    position: static;
   }
 }
 
